--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>祝～贺～</title>
         <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <link rel='shortcut icon' href='../rs/chkman.jpg'>
+        <link rel='shortcut icon' href='chkman.jpg'>
         <link rel='stylesheet' href='d1.css'>
         <script>
         var timer;
